--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   }
       /* What kind of selector is this? It is a class selector. */
 .logo {
-    max-width: -20%;
+    max-width: 10%;
     height: auto;
     left: 0px;
     right: 0px;
@@ -21,36 +21,19 @@ header {
         grid-template-columns: 40% 60%;
         width: 100%;
         background-color: #333140;
-        background-image: url("assets/banner_test.png");
       }
-  
-main {  
-        margin: 0;
-        padding: 50px 0px 0px 350px;
-        height: auto;
-        width: 100%;
-        display: grid;
-        grid-template-columns: 16% 19% 30%;
-      }
-        /* This is an element within and element selector */ 
-nav > a {
-        margin: 2% 1% 3%;
-        height: 10%;
-        width: 15%;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 20px;
-        border-radius: 25px;
-        background: transparent;
-        padding: 20px;
+
+main {
+        margin: auto;
+        width: 50%;
+        padding: 50px;
         text-align: center;
-        border: 2px solid white;
-      }
+}
+        /* This is an element within and element selector */ 
+
 .has-border {
-        border-radius: 25px;
-        border: 2px solid #0795C3;
         background: none;
-        padding: 20px;
+        padding: 15px;
       }
 
 nav {
@@ -60,41 +43,36 @@ nav {
         padding-right: 2%;
       }
 
+.profilepic{
+        display: block;
+        margin-left: auto;
+        margin-right: auto }
+      }
+ 
 h1 {
         color:white;
-        grid-column: 2/3;
-        font-size: 150px;
-        margin: 3% auto;
+        font-size: 60px;
         font-family: 'Noto Sans KR', sans-serif;
-
-      }
-  
+        text-align: center;
+        margin: 0 auto;
+            }
+        
 h2 {
         color: white;
         font-family: 'Roboto Slab', serif;
-        grid-column: 2/3;
-        margin: 3% auto;
-      }
-
-.small-text {
-        grid-column: 2/3;
-        color: white;
-        font-size: 10px;
-        margin: 3% auto;
-      }
+        text-align: center;
+            }
 
 button {
-  
         grid-column: 2/3;
         margin: 0% auto;
-        width: 69%;
-        height: 15%;
+        width: 30%;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
         border-radius: 25px;
         background: transparent;
         padding: 10px;
-        padding-bottom: 8%;
+        padding-bottom: 1%;
         text-align: center;
         color: white;
         letter-spacing: 16px;
@@ -141,6 +119,7 @@ li a:hover {
         background-color:  #565573;
         color: white;
         text-align: center;
+        font-size: 13px;
       }
 
       
