--- a/resume/style.css
+++ b/resume/style.css
@@ -1,8 +1,3 @@
-*{
-    border: 1px solid red;
-    
-}
-
 .container {
     display: grid;
     justify-content: center;
@@ -21,27 +16,32 @@
 }
 
 
-.article-1 {
+.container-2 {
     grid-area: b;
     width: 211px;
     height: 413px;
     background-color: #210140;
    }
 
-.c {
+.main {
     grid-area: c;
     width: 400px;
     height: 826px;
     background-color: #D9B8B8;
 }
 
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-weight: 700;
+    font-size: 70px;
+}
 
 h2 {
     font-family: 'Montserrat', sans-serif;
     color: white;
     font-weight: 700;
     font-size: 20px;
-    text-align: center;
 }
 
 h3 {
@@ -49,4 +49,35 @@ h3 {
     color: white;
     font-weight: 200;
     font-size: 15px;
+}
+
+h4{
+    font-family: 'Julius Sans One', sans-serif;
+    color: white;
+    font-size: 20px;
+    
+}
+
+.line {
+    background-color: #210140;
+    width: 340px;
+    height: 2px;
+}
+
+li {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-weight: 200;
+    font-size: 15px;
+}
+
+.article-1 {
+    width: 180px;
+    margin: auto;
+    padding: 20px 0 0 0;
+}
+
+.contact {
+    padding: 0 0 0 -10px;
+    margin: auto;
 }
