--- a/aboutPage/about-styles.css
+++ b/aboutPage/about-styles.css
@@ -2,20 +2,68 @@ body {
     margin: 0;
 }
 
+header{
+
+
+}
+
+.page-links {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+ul{
+    text-decoration: none;
+}
+
+li {
+    display: inline;
+}
+
+h1 {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .row {
     display: flex;
 }
 
 .container {
     width: 20%;
+    position: relative;
 }
 
 .container img {
     width: 100%;
+    opacity: 1;
+    height: auto;
+    transition: .5s ease-in-out;
 }
 
 .row .container:focus, 
 .row .container:hover{
     transform: scale(1.5);
     z-index: 1;
+}
+
+.middle {
+    background-color: red;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    width: 50%;
+    height: 50%;
+    transform: translate( -50%, -50%);
+    text-align: center;
+}
+
+.container:hover .middle {
+    opacity: 1;
+}
+
+.text {
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
 }
