--- a/aboutPage/about-styles.css
+++ b/aboutPage/about-styles.css
@@ -3,13 +3,36 @@ body {
 }
 
 header{
-
-
+    margin: 0;
+    padding: 0;
 }
 
 .page-links {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    height: 100px;
+}
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
+.top-back {
+    font-family: 'Montserrat', sans-serif;
+    padding: 3.6%;
+
+}
+
+.top-title{
+    text-align: center;
+    padding: 1%;
+}
+
+.top-socials{
+
+    padding: 3.6%;
+    padding-left:400px;
 }
 
 ul{
@@ -18,10 +41,13 @@ ul{
 
 li {
     display: inline;
+    margin: 0 11px;
 }
+
 
 h1 {
     font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
 }
 
 .row {
@@ -29,7 +55,7 @@ h1 {
 }
 
 .container {
-    width: 20%;
+    width: 100%;
     position: relative;
 }
 
