--- a/aboutPage/about-styles.css
+++ b/aboutPage/about-styles.css
@@ -93,3 +93,15 @@ h1 {
     font-size: 16px;
     padding: 16px 32px;
 }
+
+@media only screen and (min-width: 600px) {
+
+    body {
+        margin: 0;
+        width: 425px;
+    }
+    
+    
+
+
+}
